# bot-core-lib

./: README  pyproject.toml
src/bot_core/: alerts.py  db.py  events.py  media.py  user_settings.py
